required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN branch-5-6):
--------------------------------

- Fixed msMSSQL2008CloseConnection() to free the statement handle 
  properly (#3244)

- Fixed PHP MapScript's metadata.nextkey() that was sometimes skipping some
  entries on first call because the NULL arg was not properly handled (#3363)

- Fixed the query handling with the MSSQL2008 driver (#3058)

- Fixed swig zoomRectangle() method: the maxy in the rect object have to 
  be < miny value (#3286)

- Backport fix for SLD filters column names detection (#3052)

- Backport fix for WFS OGC filters regex tests (#3289)

- Fix crash with GRID layers with no classes (#3352)

- Avoid memory error when building SQL bbox (#3324)

- Determine PgSQL version in a more backwards compatible way (#3291)

- Implemented RFC 52 LayerResultsGetShape support for OGR connection 
  type. (#3069)

- Fixed problem with the oracle driver w/FUNCTION=NONE (#3260)

- Got rid of invalid warning about missing EPSG proj in WMs GetCapabilities
  when map has a valid EPSG proj, but layer doesn't (#2028)


- Correct one pass query problems and OGC filter query (#3305)

- Correct QueryByOperator (#3346)


Version 5.6.1 (2010-01-08):
---------------------------

- Changed msSaveImageBufferGD to be in accordance with msSaveImageGD (#3201)

- Changed the query map rendering implementation without adding extra layers
  to the map (#3069)

- SQL Server 2008 plugin is not handling null field values correctly (#2893)

- Hatch symbol not properly saved (#2905)

- Expose symbolObj.inmapfile to the SWIG API, have already been exposed 
  to PHP (#3233)

- Expose getGeomTransform/setGeomTransform to SWIG instead of exposing the