@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN branch-5-6):
 --------------------------------
 
+- Support wrap character for SVG output (#3367)
+
 - Fixed msMSSQL2008CloseConnection() to free the statement handle 
   properly (#3244)
 
